# room_generator

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  main.cpp
include/: Array2.h  Box.h  Constraint.h  CornerConstraint.h  Direction.h  DistanceToAnyWallConstraint.h  DistanceToBorderConstraint.h  DistanceToWallConstraint.h  Domain.h  Grid.h  NextToDoorConstraint.h  RandomGenerator.h  Solver.h  Variable.h  Vector2.h
src/: CornerConstraint.cpp  DistanceToAnyWallConstraint.cpp  DistanceToBorderConstraint.cpp  DistanceToWallConstraint.cpp  Grid.cpp  NextToDoorConstraint.cpp  Solver.cpp
